# mfish-roi-classifier

./: LICENSE  README.md  pyproject.toml
labels/: roi_qc_actions.jsonl
models/: roi_quality_4class.txt  roi_quality_binary.txt  roi_quality_meta.json  roi_quality_stage2_4class_v5d_um.txt  roi_quality_stage2_binary_v5d_um.txt  roi_quality_stage2_meta_v5d_um.json
src/mfish_roi_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/roi_classifier/: __init__.py  axis_features.py  benchmark_data_loader.py  cli.py  config.py  feat_axis.py  feat_per_cell_crops.py  feat_protrusion.py  feat_shape.py  feat_surface.py  feat_tight_bbox.py  features.py  model.py  protrusion_features.py  roi_quality.py  roi_quality_v2.py  roi_quality_v3.py  roi_quality_v4.py  roi_quality_v5.py  roi_quality_v5d.py  roi_quality_v7.py  roi_v3_axis_features.py  roi_v4_features.py  roi_v5_features.py  roi_v5_neighbors.py  roi_v6_voxel.py  roi_v7_features.py  surface_features.py
src/roi_classifier/label_gui/: 04b_label_gui_app.py  __init__.py  app.py  gui.py
